k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-frontend
  namespace: vector-prod
  labels:
    app: vector-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vector-frontend
  template:
    metadata:
      labels:
        app: vector-frontend
    spec:
      containers:
        - name: vector-frontend
          image: registry.digitalocean.com/docr-prod/vector-frontend:7e8fb72
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
