k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-frontend
  namespace: vector-prod
  labels:
    app: vector-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: vector-frontend
